--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -28,6 +28,10 @@
         <servlet-name>DoSomethingServlet</servlet-name>
         <servlet-class>controller.DoSomethingServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DoQuiz</servlet-name>
+        <servlet-class>controller.DoQuizController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -64,6 +68,10 @@
         <servlet-name>DoSomethingServlet</servlet-name>
         <url-pattern>/DoSomethingServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DoQuiz</servlet-name>
+        <url-pattern>/doquiz</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -81,4 +89,5 @@
             <role-name>users</role-name>
         </auth-constraint>
     </security-constraint>
+    
 </web-app>
